crates/ars-components/src/utility/button/snapshots/ars_components__utility__button__tests__button_content_idle.snap
---
source: crates/ars-components/src/utility/button.rs
expression: "snapshot_attrs(&service(test_props()).connect(&|_| {}).content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-loading",
            ),
            String(
                "false",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
