crates/ars-components/src/utility/button/snapshots/ars_components__utility__button__tests__button_content_loading.snap
---
source: crates/ars-components/src/utility/button.rs
expression: "snapshot_attrs(&service(test_props().loading(true)).connect(&|_|\n{}).content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-loading",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
