crates/ars-components/src/utility/button/snapshots/ars_components__utility__button__tests__button_root_focused.snap
---
source: crates/ars-components/src/utility/button.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "button",
            ),
        ),
        (
            Data(
                "ars-size",
            ),
            String(
                "md",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "focused",
            ),
        ),
        (
            Data(
                "ars-variant",
            ),
            String(
                "default",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
