crates/ars-components/src/utility/button/snapshots/ars_components__utility__button__tests__button_root_form_override.snap
---
source: crates/ars-components/src/utility/button.rs
expression: "snapshot_attrs(&service(props).connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-prevent-focus-on-press",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "button",
            ),
        ),
        (
            Data(
                "ars-size",
            ),
            String(
                "lg",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "idle",
            ),
        ),
        (
            Data(
                "ars-variant",
            ),
            String(
                "primary",
            ),
        ),
        (
            AutoFocus,
            Bool(
                true,
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            Form,
            String(
                "checkout",
            ),
        ),
        (
            FormAction,
            String(
                "/checkout",
            ),
        ),
        (
            FormEncType,
            String(
                "application/x-www-form-urlencoded",
            ),
        ),
        (
            FormMethod,
            String(
                "post",
            ),
        ),
        (
            FormNoValidate,
            Bool(
                true,
            ),
        ),
        (
            FormTarget,
            String(
                "_self",
            ),
        ),
        (
            Name,
            String(
                "intent",
            ),
        ),
        (
            Type,
            String(
                "submit",
            ),
        ),
        (
            Value,
            String(
                "pay",
            ),
        ),
    ],
    styles: [],
}
