crates/ars-components/src/utility/button/snapshots/ars_components__utility__button__tests__button_root_loading.snap
---
source: crates/ars-components/src/utility/button.rs
expression: "snapshot_attrs(&service(test_props().loading(true)).connect(&|_|\n{}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-loading",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "button",
            ),
        ),
        (
            Data(
                "ars-size",
            ),
            String(
                "md",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "loading",
            ),
        ),
        (
            Data(
                "ars-variant",
            ),
            String(
                "default",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Busy,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
